@@ -76,6 +76,15 @@ Abstract Base class for unpack tasks.
 </td>
 </tr>
 
+<tr>
+<td>
+<a href="api/org/apache/tools/ant/dispatch/DispatchTask.html">DispatchTask</a>
+</td>
+<td>
+Abstract Base class for tasks that may have multiple actions.
+</td>
+</tr>
+
 </tbody>
 </table>
 
